--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.11.3+16
   json_annotation: ^0.2.5
+  transparent_image: "^0.1.0"
 
 dev_dependencies:
   # flutter_test:
