--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   http: ^0.11.3+16
   json_annotation: ^0.2.5
   transparent_image: "^0.1.0"
+  url_launcher: "^3.0.2"
 
 dev_dependencies:
   # flutter_test:
