--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,11 @@
 name: flutter_rss
 description: A RSS reader of the New York Times
 
+version: 1.0.0+1
+
+environment:
+  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
@@ -14,9 +19,9 @@ dependencies:
   url_launcher: "^3.0.2"
 
 dev_dependencies:
-  # flutter_test:
-  #   sdk: flutter
-  build_runner: ^0.8.9
+  flutter_test:
+    sdk: flutter
+  # build_runner: ^0.8.9
   json_serializable: ^0.5.4
 
 
